# desktop

./: .gitignore  LICENSE
.github/workflows/: linux-ci.yml  linux-release.yml  release.yml  windows-desktop-build.yml
linux/: .gitignore  Cargo.toml  README.md  meson.build  org.sigilauth.Desktop.yml
linux/.github/workflows/: ci.yml  security.yml
linux/crates/: meson.build
linux/crates/sigil-cryptosign/: Cargo.toml
linux/crates/sigil-cryptosign/src/: main.rs
linux/crates/sigil-desktop/: Cargo.toml
linux/crates/sigil-desktop/resources/: style.css
linux/crates/sigil-desktop/src/: a11y.rs  app.rs  i18n.rs  main.rs  pair_flow.rs  pairing_code.rs  relay.rs  tray.rs
linux/crates/sigil-desktop/src/components/: mod.rs  pictogram_view.rs
linux/crates/sigil-desktop/src/views/: approval.rs  mod.rs  pairing.rs  servers.rs  session_pictogram.rs
linux/crates/sigil-hardware/: Cargo.toml
linux/crates/sigil-hardware/src/: lib.rs  test_support.rs  tpm.rs  yubikey.rs
linux/crates/sigil-hardware/tests/: integration_test.rs  trait_contract.rs
linux/crates/sigil-i18n/: Cargo.toml
linux/crates/sigil-i18n/src/: lib.rs
linux/crates/sigil-i18n/tests/: catalog.rs
linux/crates/sigil-secret/: Cargo.toml
linux/crates/sigil-secret/src/: lib.rs
linux/crates/sigil-secret/tests/: trust_persistence.rs
linux/crates/sigil-wire/: Cargo.toml
linux/crates/sigil-wire/src/: client.rs  crypto.rs  envelope.rs  fingerprint.rs  lib.rs  nonce_store.rs  pictogram.rs  session_pictogram.rs  signature_payload.rs  wire.rs
linux/crates/sigil-wire/tests/: fingerprint.rs  pictogram.rs  signature_payload.rs  wire_serde.rs
linux/data/: meson.build  org.sigilauth.Desktop.desktop  org.sigilauth.Desktop.desktop.in  org.sigilauth.Desktop.gschema.xml  org.sigilauth.Desktop.gschema.xml.in  org.sigilauth.Desktop.metainfo.xml  org.sigilauth.Desktop.metainfo.xml.in
linux/flatpak/: README.md  org.sigilauth.Desktop.yml
linux/packaging/debian/: postinst  postrm
linux/packaging/rpm/: sigilauth-desktop.spec
linux/po/: LINGUAS  POTFILES.in  meson.build
linux/scripts/: Dockerfile.dev  test-in-container.sh
linux/working/: ws-integration-test.md
linux/working/linux-desktop/: patterns.md  violations-log.md
macos/: .gitignore  ACCEPTANCE_CRITERIA.md  B7_COMPLETION_STATUS.md  B7_FINAL_STATUS.md  CHANGELOG.md  CODE_SIGNING.md  Package.swift  README.md  SigilAuth.entitlements  TESTS-KNOWN-ISSUES.md  run-tests.sh
macos/.github/workflows/: ci.yml  codeql.yml
macos/Resources/Localization/en/: auth.ftl  challenge.ftl  common.ftl  devices.ftl  errors.ftl  mnemonic.ftl  mpa.ftl  pictogram.ftl
macos/Sources/CArgon2/include/: module.modulemap
macos/Sources/SigilAuth/: SigilAuth.swift
macos/Sources/SigilAuth/Crypto/: Argon2Service.swift  CanonicalJSON.swift  DomainSeparation.swift  ECIESService.swift  EnvelopeService.swift  NonceStore.swift  Pictogram.swift  SecureEnclaveKey.swift  SessionPictogram.swift  YubiKeyKey.swift
macos/Sources/SigilAuth/Extensions/: DataExtensions.swift
macos/Sources/SigilAuth/Localization/: LocalizationService.swift
macos/Sources/SigilAuth/Models/: PairHandshake.swift  PictogramPool.swift
macos/Sources/SigilAuth/Network/: ChallengeService.swift  RelayClient.swift
macos/Sources/SigilAuth/PairFlow/: PairFlowService.swift  PairFlowViewModel.swift
macos/Sources/SigilAuth/Storage/: TrustStorageService.swift
macos/Sources/SigilAuthApp/: DesignSystem.swift  Localization.swift  SigilAuthApp.swift
macos/Sources/SigilAuthApp/Resources/: pictogram-pool-v1.json
macos/Sources/SigilAuthApp/Views/: ApprovalView.swift  PairFlowView.swift  PairingView.swift  PictogramView.swift  QRScannerView.swift  QRScannerViewController.swift  QuickApproveView.swift  ServerListView.swift  SessionPictogramView.swift  SettingsView.swift
macos/Sources/SigilCryptoSign/: main.swift
macos/Tests/SigilAuthTests/: EnvelopeTests.swift  LowSTests.swift  PictogramTests.swift  RelayClientIntegrationTests.swift  SessionPictogramTests.swift  TestDeviceKey.swift
macos/Tests/SigilAuthTests/TestVectors/: bip39.json  ecdsa.json  hkdf.json  pictogram.json
windows/: CHANGELOG.md  Directory.Build.props  README.md  Sigil.Windows.sln
windows/.github/workflows/: nuget-publish.yml  windows-ci.yml
windows/packaging/: README.md  package.ps1  sign.ps1
windows/src/: WINDOWS-APP-STATUS.md
windows/src/Sigil.Windows.App/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Sigil.Windows.App.csproj  WINDOWS-COMPLETION.md  WindowsHelloKeyProvider.cs  app.manifest
windows/src/Sigil.Windows.App/Assets/: README.md
windows/src/Sigil.Windows.App/Converters/: BoolNegationConverter.cs  NullToCollapsedConverter.cs  StringNotEmptyConverter.cs
windows/src/Sigil.Windows.App/Models/: Pictogram.cs  ServerConfig.cs
windows/src/Sigil.Windows.App/Services/: ChallengeService.cs  DeviceKeyService.cs  IChallengeService.cs  IDeviceKeyService.cs  INavigationService.cs  ISecureStorageService.cs  ISigilApiService.cs  ISystemTrayService.cs  IWindowsHelloService.cs  NavigationService.cs  SecureStorageService.cs  SigilApiService.cs  SystemTrayService.cs  WindowsHelloService.cs
windows/src/Sigil.Windows.App/ViewModels/: ApprovalViewModel.cs  PairFlowViewModel.cs  ServerListViewModel.cs
windows/src/Sigil.Windows.App/Views/: ApprovalView.xaml  ApprovalView.xaml.cs  PairFlowView.xaml  PairFlowView.xaml.cs  ServerListView.xaml  ServerListView.xaml.cs
windows/src/Sigil.Windows.Core/: README.md  Sigil.Windows.Core.csproj
windows/src/Sigil.Windows.Core/Abstractions/: DeviceKeyHandle.cs  IDeviceKeyProvider.cs  IWebSocketClient.cs
windows/src/Sigil.Windows.Package/: Package.appxmanifest  Sigil.Windows.Package.wapproj
windows/tests/Sigil.Windows.Core.Tests/: DomainSeparationTests.cs  EciesTests.cs  EnvelopeSignerTests.cs  RelayWebSocketIntegrationTests.cs  SessionPictogramTests.cs  Sigil.Windows.Core.Tests.csproj  TestDeviceKeyProvider.cs  WebSocketChallengeListenerUnitTests.cs
windows/tools/Sigil.Windows.CryptoSign/: Program.cs  Sigil.Windows.CryptoSign.csproj
working/: macos-build-verification.md
(+24 files in other folders)
