[package]
name = "sigil-wire"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Sigil Auth protocol wire types, pictogram derivation, signature payload construction"

[dependencies]
sha2.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.1"
base64 = "0.22"
thiserror.workspace = true

# HTTP + WebSocket client
reqwest.workspace = true
tokio.workspace = true
url.workspace = true

# Crypto
p256.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
argon2.workspace = true
rand_core.workspace = true

[dev-dependencies]
anyhow.workspace = true
hex = "0.4"
serde_json = "1"
base64 = "0.22"
tokio = { workspace = true, features = ["macros", "rt"] }
